backend/internal/architecture/testdata/invalid/internal/modules/bad/api.go
package bad

// Query is a protocol-neutral fixture type.
type Query struct{ ID int64 }
